--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,18 @@ a {
     color-scheme: dark;
   }
 }
+
+/* 
+ * Utility class to hide content visually while keeping it screen reader-accessible.
+ * Original source: https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html 
+ * Where I got it: https://www.sarasoueidan.com/blog/accessible-icon-buttons/
+ */
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
